[package]
name = "rust"
version = "0.1.0"
authors = ["rishav4101 <rajkumarrishav4101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = "0.15.3"
rand = "0.6.5"
chrono = "0.4"
serde_json = "1.0"
sha2 = "0.9.1"
hex-literal = "0.3.1"
